fix(header): transition z-index

--- a/src/components/global/header/header.scss
+++ b/src/components/global/header/header.scss
@@ -16,10 +16,11 @@
   background: var(--kd-color-neutral-webgray);
   box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1);
   padding: 4px 8px;
+  transition: z-index 150ms ease-out;
   z-index: var(--kd-z-header);
 
   &.child-open {
-    z-index: calc(var(--kd-z-header) + 1);
+    z-index: calc(var(--kd-z-header) + 20);
   }
 
   @media screen and (min-width: 42rem) {
